--- a/helm/conjur-k8s-csi-provider/templates/provider.yaml
+++ b/helm/conjur-k8s-csi-provider/templates/provider.yaml
@@ -53,6 +53,8 @@ spec:
             port: 8080
           initialDelaySeconds: 30
           periodSeconds: 30
+        securityContext:
+          allowPrivilegeEscalation: false
       volumes:
       - name: provider-volume
         hostPath:
