--- a/helm/conjur-k8s-csi-provider/values.yaml
+++ b/helm/conjur-k8s-csi-provider/values.yaml
@@ -1,11 +1,18 @@
 # Values for conjur-k8s-csi-provider. All missing values must be supplied by the user.
 
+openshift:
+  enabled: false
+
 providerServer:
   name: conjur-k8s-csi-provider
   image:
     repo: cyberark/conjur-k8s-csi-provider
     tag: latest
     pullPolicy: IfNotPresent
+
+serviceAccount:
+  create: true
+  name: conjur-k8s-csi-provider
 
 labels: {}
 annotations: {}
