--- a/helm/test-app/templates/app.yaml
+++ b/helm/test-app/templates/app.yaml
@@ -3,14 +3,14 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: app
-  namespace: csi
+  namespace: {{ .Release.Namespace }}
 spec:
   serviceAccountName: default
   containers:
     - name: app
       image: alpine:latest
       imagePullPolicy: Always
-      command: [ "/bin/bash", "-c", "--" ]
+      command: [ "/bin/sh", "-c", "--" ]
       args: [ "while true; do sleep 30; done;" ]
       volumeMounts:
         - name: conjur-csi-provider-volume
