--- a/helm/test-app/templates/secret-provider-class.yaml
+++ b/helm/test-app/templates/secret-provider-class.yaml
@@ -3,6 +3,7 @@ apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: {{ .Values.secretProviderClass.name }}
+  namespace: {{ .Release.Namespace }}
 spec:
   provider: conjur
   parameters:
