Support customizable socket dir and health server port

--- a/helm/conjur-k8s-csi-provider/tests/provider_test.yaml
+++ b/helm/conjur-k8s-csi-provider/tests/provider_test.yaml
@@ -7,10 +7,14 @@ templates:
   - provider.yaml
 
 defaults: &defaultRequired
-  providerServer.name: test-name
-  providerServer.image.repo: test-image
-  providerServer.image.tag: 0.0.0
-  providerServer.image.pullPolicy: Never
+  daemonSet.name: test-name
+  daemonSet.image.repo: test-image
+  daemonSet.image.tag: 0.0.0
+  daemonSet.image.pullPolicy: Never
+  provider.name: test-provider-name
+  provider.healthPort: 1234
+  provider.socketDir: /test/path
+  securityContext: { this: that }
   serviceAccount.name: test-sa
 
 tests:
@@ -34,6 +38,12 @@ tests:
       - equal:
           path: spec.selector.matchLabels.name
           value: test-name
+      - equal:
+          path: spec.template.spec.containers[0].args[0]
+          value: -socketPath=/test/path/test-provider-name.sock
+      - equal:
+          path: spec.template.spec.containers[0].args[1]
+          value: -healthPort=1234
       - equal:
           path: spec.template.spec.containers[0].image
           value: test-image:0.0.0
@@ -67,6 +77,12 @@ tests:
       - equal:
           path: spec.selector.matchLabels.name
           value: conjur-k8s-csi-provider
+      - equal:
+          path: spec.template.spec.containers[0].args[0]
+          value: -socketPath=/var/run/secrets-store-csi-providers/conjur.sock
+      - equal:
+          path: spec.template.spec.containers[0].args[1]
+          value: -healthPort=8080
       - equal:
           path: spec.template.spec.containers[0].image
           value: cyberark/conjur-k8s-csi-provider:latest
