--- a/helm/conjur-k8s-csi-provider/Chart.yaml
+++ b/helm/conjur-k8s-csi-provider/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-description: A Helm chart for deploying CyberArk Conjur's CSI Driver Provider 
+description: A Helm chart for deploying CyberArk Conjur's CSI Driver Provider
 name: conjur-k8s-csi-provider
-version: 0.1.0
+version: 0.0-dev
 home: https://github.com/cyberark/conjur-k8s-csi-provider
 icon: https://www.cyberark.com/wp-content/uploads/2015/12/cybr-aim.jpg
