Adds configurationVersion v0.2.0 - retrieving secrets from app pod annotations

--- a/helm/test-app/templates/app.yaml
+++ b/helm/test-app/templates/app.yaml
@@ -4,6 +4,9 @@ kind: Pod
 metadata:
   name: app
   namespace: {{ .Release.Namespace }}
+  annotations:
+    conjur.org/secrets: |
+{{ .Values.conjur.secrets | indent 6 }}
 spec:
   serviceAccountName: default
   containers:
