--- a/helm/test-app/values.yaml
+++ b/helm/test-app/values.yaml
@@ -4,6 +4,7 @@ secretProviderClass:
   name: database-credentials
 
 conjur:
+  configurationVersion:
   account: default
   applianceUrl: https://conjur-conjur-oss.conjur.svc.cluster.local
   authnId: authn-jwt/kube
