--- a/helm/test-app/templates/secret-provider-class.yaml
+++ b/helm/test-app/templates/secret-provider-class.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   provider: conjur
   parameters:
+    conjur.org/configurationVersion: {{ .Values.conjur.configurationVersion }}
     account: {{ .Values.conjur.account }}
     applianceUrl: {{ .Values.conjur.applianceUrl }}
     authnId: {{ .Values.conjur.authnId }}
