--- a/secrets.yml
+++ b/secrets.yml
@@ -1,1 +1,56 @@
-REDHAT_API_KEY: !var redhat/projects/conjur-k8s-csi-provider/api-key
+release:
+  REDHAT_API_KEY: !var redhat/projects/conjur-k8s-csi-provider/api-key
+
+oldest-dev:
+  OPENSHIFT_VERSION: !var dev/openshift/oldest/version
+  OPENSHIFT_URL: !var dev/openshift/oldest/api-url
+  OPENSHIFT_USERNAME: !var dev/openshift/oldest/username
+  OPENSHIFT_PASSWORD: !var dev/openshift/oldest/password
+
+  DOCKER_REGISTRY_PATH: !var dev/openshift/oldest/registry-url
+  PULL_DOCKER_REGISTRY_PATH: !var dev/openshift/oldest/internal-registry-url
+
+current-dev:
+  OPENSHIFT_VERSION: !var dev/openshift/current/version
+  OPENSHIFT_URL: !var dev/openshift/current/api-url
+  OPENSHIFT_USERNAME: !var dev/openshift/current/username
+  OPENSHIFT_PASSWORD: !var dev/openshift/current/password
+
+  DOCKER_REGISTRY_PATH: !var dev/openshift/current/registry-url
+  PULL_DOCKER_REGISTRY_PATH: !var dev/openshift/current/internal-registry-url
+
+next-dev:
+  OPENSHIFT_VERSION: !var dev/openshift/next/version
+  OPENSHIFT_URL: !var dev/openshift/next/api-url
+  OPENSHIFT_USERNAME: !var dev/openshift/next/username
+  OPENSHIFT_PASSWORD: !var dev/openshift/next/password
+
+  DOCKER_REGISTRY_PATH: !var dev/openshift/next/registry-url
+  PULL_DOCKER_REGISTRY_PATH: !var dev/openshift/next/internal-registry-url
+
+oldest:
+  OPENSHIFT_VERSION: !var ci/openshift/oldest/version
+  OPENSHIFT_URL: !var ci/openshift/oldest/api-url
+  OPENSHIFT_USERNAME: !var ci/openshift/oldest/username
+  OPENSHIFT_PASSWORD: !var ci/openshift/oldest/password
+
+  DOCKER_REGISTRY_PATH: !var ci/openshift/oldest/registry-url
+  PULL_DOCKER_REGISTRY_PATH: !var ci/openshift/oldest/internal-registry-url
+
+current:
+  OPENSHIFT_VERSION: !var ci/openshift/current/version
+  OPENSHIFT_URL: !var ci/openshift/current/api-url
+  OPENSHIFT_USERNAME: !var ci/openshift/current/username
+  OPENSHIFT_PASSWORD: !var ci/openshift/current/password
+
+  DOCKER_REGISTRY_PATH: !var ci/openshift/current/registry-url
+  PULL_DOCKER_REGISTRY_PATH: !var ci/openshift/current/internal-registry-url
+
+next:
+  OPENSHIFT_VERSION: !var ci/openshift/next/version
+  OPENSHIFT_URL: !var ci/openshift/next/api-url
+  OPENSHIFT_USERNAME: !var ci/openshift/next/username
+  OPENSHIFT_PASSWORD: !var ci/openshift/next/password
+
+  DOCKER_REGISTRY_PATH: !var ci/openshift/next/registry-url
+  PULL_DOCKER_REGISTRY_PATH: !var ci/openshift/next/internal-registry-url
