--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -5,7 +5,7 @@ WORKDIR /src
 
 # Install dependencies
 RUN apt-get update -y && \
-    apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common wget jq
+    apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common wget jq gettext-base
 
 # Install yq
 RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq && \
@@ -40,6 +40,13 @@ ARG HELM_CLI_VERSION
 RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
 RUN chmod 700 get_helm.sh
 RUN ./get_helm.sh --no-sudo --version ${HELM_CLI_VERSION:-v3.5.2}
+
+# Install Openshift CLI
+ARG OC_CLI_VERSION=latest
+RUN curl -fsSL -o oc.tar.gz https://mirror.openshift.com/pub/openshift-v4/clients/ocp/${OC_CLI_VERSION}/openshift-client-linux.tar.gz && \
+    tar -xzf oc.tar.gz && \
+    mv oc /usr/local/bin/ && \
+    rm -f oc.tar.gz kubectl README.md
 
 # Add the WORKDIR as a safe directory so git commands
 # can be run in containers using this image
