--- a/helm/conjur-k8s-csi-provider/templates/provider.yaml
+++ b/helm/conjur-k8s-csi-provider/templates/provider.yaml
@@ -44,6 +44,13 @@ spec:
           - -healthPort={{ .Values.provider.healthPort }}
         ports:
         - containerPort: {{ .Values.provider.healthPort }}
+        resources:
+          requests:
+            cpu: 50m
+            memory: 100Mi
+          limits:
+            cpu: 50m
+            memory: 100Mi
         volumeMounts:
         - name: provider-volume
           mountPath: {{ .Values.provider.socketDir }}
